--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "vue2-transformer-to-vue3",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/cjs.js",
+  "module": "./dist/esm.js",
+  "browser": "./dist/esm.js",
   "scripts": {
     "test": "jest",
+    "build": "webpack --config webpack.config.js",
     "t": "node ./t.js"
   },
   "files": [
@@ -19,10 +22,17 @@
   "author": "joey.wu",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.24.5",
+    "assert": "^2.1.0",
+    "babel-loader": "^9.1.3",
+    "constants-browserify": "^1.0.0",
     "css-tree": "^1.1.3",
     "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
-    "prettier": "^2.2.1"
+    "path-browserify": "^1.0.1",
+    "prettier": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5"
   },
   "jest": {
     "collectCoverage": true,
@@ -36,7 +46,9 @@
   },
   "devDependencies": {
     "glob": "^7.1.7",
-    "gogocode": "^1.0.48",
-    "jest": "^26.6.3"
+    "gogocode": "^1.0.55",
+    "jest": "^26.6.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
