--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue2-transformer-to-vue3",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "./dist/cjs.js",
   "module": "./dist/esm.js",
@@ -11,6 +11,7 @@
     "t": "node ./t.js"
   },
   "files": [
+    "dist",
     "index.js",
     "utils",
     "src"
