--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue2-transformer-to-vue3",
-  "version": "1.0.5",
+  "version": "1.0.8",
   "description": "",
   "main": "./dist/cjs.js",
   "module": "./dist/esm.js",
@@ -26,6 +26,8 @@
     "@babel/preset-env": "^7.24.5",
     "assert": "^2.1.0",
     "babel-loader": "^9.1.3",
+    "browserify-fs": "^1.0.0",
+    "buffer": "^6.0.3",
     "constants-browserify": "^1.0.0",
     "css-tree": "^1.1.3",
     "fs-extra": "^10.0.0",
@@ -33,6 +35,7 @@
     "path-browserify": "^1.0.1",
     "prettier": "^2.2.1",
     "stream-browserify": "^3.0.0",
+    "url": "^0.11.3",
     "util": "^0.12.5"
   },
   "jest": {
