--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue2-transformer-to-vue3",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "",
   "main": "./dist/cjs.js",
   "module": "./dist/esm.js",
@@ -28,9 +28,11 @@
     "babel-loader": "^9.1.3",
     "browserify-fs": "^1.0.0",
     "buffer": "^6.0.3",
+    "clean-webpack-plugin": "^4.0.0",
     "constants-browserify": "^1.0.0",
     "css-tree": "^1.1.3",
     "fs-extra": "^10.0.0",
+    "html-webpack-plugin": "^5.6.0",
     "lodash": "^4.17.21",
     "path-browserify": "^1.0.1",
     "prettier": "^2.2.1",
